// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DefaultErrorFallback > should render correctly with a Error type 1`] = `
<StaticLayout
  modalContent={
    <Styled(MockContainer)
      header={
        <MockHeader
          variant="h2"
        >
          Error
        </MockHeader>
      }
    >
      <MockTextContent>
        <p>
          Testing an error
        </p>
      </MockTextContent>
    </Styled(MockContainer)>
  }
/>
`;

exports[`DefaultErrorFallback > should render correctly with a SceneComposerRuntimeError type 1`] = `
<StaticLayout
  modalContent={
    <Styled(MockContainer)
      header={
        <MockHeader
          variant="h2"
        >
          Error
        </MockHeader>
      }
    >
      <MockTextContent>
        <p>
          Testing a SceneComposerRuntimeError
        </p>
      </MockTextContent>
    </Styled(MockContainer)>
  }
/>
`;

exports[`DefaultErrorFallback > should render correctly with a String type 1`] = `
<StaticLayout
  modalContent={
    <Styled(MockContainer)
      header={
        <MockHeader
          variant="h2"
        >
          Error
        </MockHeader>
      }
    >
      <MockTextContent>
        <p>
          Testing a string
        </p>
      </MockTextContent>
    </Styled(MockContainer)>
  }
/>
`;

exports[`DefaultErrorFallback > should render correctly with a Unknown type 1`] = `
<StaticLayout
  modalContent={
    <Styled(MockContainer)
      header={
        <MockHeader
          variant="h2"
        >
          Error
        </MockHeader>
      }
    >
      <MockTextContent>
        <p>
          An unexpected error occurred.
        </p>
      </MockTextContent>
    </Styled(MockContainer)>
  }
/>
`;
